# jira-local-sync

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  plan.md  pyproject.toml
docs/: plan.md
examples/: README.md  calypso_stories.py
src/jira_local_sync/: __init__.py  config.py  jira_client.py  markdown_converter.py  processor.py
tests/: test_config.py  test_integration.py  test_jira_client.py
tests/integration/: test_jira_client_integration.py  test_markdown_converter_integration.py  test_processor_integration.py
tests/unit/: test_config.py  test_markdown_converter.py  test_processor.py
